vertically align li's in center

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 /* HEADER */
 
 header {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -16,6 +17,7 @@ header {
 
 header ul {
   list-style: none;
+  line-height: 30px;
 }
 
 li {
