--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,30 @@ h1 {
   font-size: 32px;
 }
 
+h2 {
+  font-size: 24px;
+}
+
+h5 {
+  font-size: 12px;
+}
+
+h6 {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.copyright-p {
+  font-size: 12px;
+}
+
 /*** HEADER ***/
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 1.25em;
 }
 
 header ul {
@@ -51,16 +68,59 @@ li a {
 }
 
 .hero-container {
-  margin-right: 30px;
-  line-height: 1.2;
+  margin-right: 1.6em;
+  line-height: 1.15;
 }
 
 .hero-date {
   font-weight: 400;
   font-size: 12px;
-  margin-bottom: 5px;
+  margin-bottom: 0.2em;
 }
 
 .hero-title {
-  margin-bottom: 5px;
+  margin-bottom: 0.2em;
+}
+
+/*** POSTS ***/
+
+.posts {
+  padding: 1.25em;
+}
+
+.posts-container {
+  width: 100%;
+}
+
+.post-item {
+  margin-bottom: 2.5em;
+}
+
+.post-img {
+  width: 100%;
+  height: auto;
+}
+
+.post-item:last-child {
+  margin-bottom: 30px;
+}
+
+/*** VIEW MORE div ***/
+
+.more-container {
+  text-align: center;
+}
+
+.more-link {
+  color: black;
+  font-weight: 600;
+}
+
+/*** FOOTER ***/
+
+footer {
+  padding: 2.25em;
+  text-align: center;
+  color: white;
+  background-color: black;
 }
