add logo and minor styling adjustments

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,14 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.25em;
+  padding: 0.5em;
+}
+
+.logo {
+  width: 150px;
+  height: 40px;
+  object-fit: cover;
+  padding-top: 7px;  
 }
 
 header ul {
@@ -93,16 +100,17 @@ li a {
 }
 
 .post-item {
-  margin-bottom: 2.5em;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  margin-bottom: 2em;
 }
 
 .post-img {
   width: 100%;
   height: auto;
-}
-
-.post-item:last-child {
-  margin-bottom: 30px;
+  border-radius: 3px;
+  margin-bottom: 5px;
 }
 
 /*** VIEW MORE div ***/
