--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,20 @@ h6 {
   font-size: 12px;
 }
 
+li a {
+  text-decoration: none;
+  color: black;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+@media (min-width: 600px) {
+  li a {
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
+
 /*** HEADER ***/
 
 header {
@@ -54,14 +68,7 @@ header ul {
 
 li {
   float: left;
-  margin-right: 10px;
-}
-
-li a {
-  text-decoration: none;
-  color: black;
-  font-weight: bold;
-  font-size: 12px;
+  margin-right: 30px;
 }
 
 /*** HERO ***/
